Bandeiras para linguagens

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <title>DevLinks</title>
 </head>
 <body>
+    <div id="language" onclick="toggleLang()">
+        <button class="brasil"></button>
+        <button class="estados-unidos"></button>
+        <span></span>
+    </div>
     <div id="container">
         <div id="profile">
             <img src="./assets/avatar.png" alt="Foto de Allan">
