--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
     <title>DevLinks</title>
 </head>
 <body>
-    <div id="language" onclick="toggleLang()">
+    <div id="language">
         <button class="brasil"></button>
         <button class="estados-unidos"></button>
         <span></span>
@@ -31,7 +31,7 @@
             <ul>
                 <li>
                     <a href="https://github.com/Allanpt" 
-                    target="_blank"
+                    target="_blank" 
                     >Veja meu portfólio</a>
                 </li>
             </ul>
